# Oxid_OS

./: Cargo.toml  README.md  debug  makefile
config/: grub.cfg  linker.ld  x86_64-unknown-oxid.json
src/: console.rs  lib.rs  panic.rs
src/arch/: mod.rs
src/arch/boot/: boot.asm  multiboot.asm
src/arch/interrupts/: mod.asm  mod.rs
src/arch/interrupts/handlers/: context.rs  mod.rs
src/arch/interrupts/idt/: idt_ent.rs  isr.asm  isr.rs  mod.asm  mod.rs
src/arch/interrupts/pic/: mod.asm  mod.rs
src/arch/io/: mod.rs  ps2_keyboard.rs  textmode.rs
src/arch/mem/: mod.rs
src/arch/mem/page_tables/: general_entry.rs  general_table.rs  mod.rs  pd.rs  pdp.rs  pml_4.rs  pt.rs
src/arch/mem/tlb/: mod.asm  mod.rs
src/arch/proc/: mod.asm  mod.rs
src/arch/proc/process/: mod.rs  scheduling.rs  tss.asm  tss.rs
src/arch/registers/: mod.asm  mod.rs  wrapper_macros.rs
src/debug/: memview.rs  mod.rs
src/demo/: echo.rs  loopforever.rs  poke.rs
src/io/: mod.rs  term.rs
src/io/keyboard/: mod.rs  ps2.rs
src/io/textmode/: color.rs  driver.rs  mod.rs  writer.rs
src/mem/: align.rs  bitwise.rs  map.rs  mod.rs  page_fault.rs  region.rs  vmm.rs
src/mem/dyn_alloc/: heap_list.rs  heap_node.rs  heap_node_alloc.rs  mod.rs
src/mem/frame_alloc/: bitmap.rs  mem_info.rs  mod.rs
src/multiboot2/: boot_dev.rs  elf_symbols.rs  mem_info.rs  mem_map.rs  mod.rs  tag.rs
src/olibc/: memcmp.rs  memcpy.rs  memmove.rs  memset.rs  mod.rs
src/proc/: mod.rs  mutex.rs  process.rs  scheduler.rs
src/programs/: clear.rs  echo.rs  loopforever.rs  mod.rs  poke.rs
(+21 files in other folders)
